wacc/test/golden/syntaxErr.function.funcExpr
# function calls are not first-class expressions

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int f() is
    return 0 
  end
  int x = f() + f()
end
	


(line 15, column 12):
  unexpected "()"
  expected !=, ";", "[", %, &&, *, +, -, /, <, <=, ==, >, >=, end, or ||
  >  end
  >  int x = f() + f()
              ^^
  >end